leptos_macro/tests/view/15_children_missing.stderr
error[E0599]: the method `__check_missing` exists for struct `InnerPropsBuilder<{closure@$DIR/tests/view/15_children_missing.rs:10:48: 10:50}, ((i32,), ({closure@$DIR/tests/view/15_children_missing.rs:10:48: 10:50},), ())>`, but its trait bounds were not satisfied
  --> tests/view/15_children_missing.rs:10:14
   |
10 |             <Inner concrete_i32=42 generic_fun=|| true>
   |              ^^^^^ method cannot be called due to unsatisfied trait bounds
...
16 | #[component]
   | ------------ method `__check_missing` not found for this struct
   |
note: trait bound `(): __required_Inner_children` was not satisfied
  --> tests/view/15_children_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
